--- a/task04.html
+++ b/task04.html
@@ -31,7 +31,7 @@
     <section id="about" class="about">
         <div class="container">
             <h2>About Me</h2>
-            <img src="C:\Users\Amit Gupta\Downloads\selfporait.jpg" width="200px" height="200px"  alt="Amit Gupta">
+            <img src="https://cdn3.iconfinder.com/data/icons/avatars-flat/33/man_5-1024.png" width="200px" height="200px"  alt="Amit Gupta">
             <p>"Hi there! I'm Amit Gupta, a passionate computer engineer with a knack for turning complex <br> problems into elegant solutions. Whether it's designing efficient algorithms,<br> optimizing code, or creating innovative software, I thrive on challenges that push the boundaries of technology. <br>Let's connect and explore the exciting possibilities at the intersection of code and creativity!"</p>
             <p>Bachelor's Degree in Computer Science, Thakur College of Engineering and Technology (TCET) <br> I'm a 3rd year computer engineering student <br> my CGPA score: 8.5CGPA </p>
         </div>
